# compressed_transactions

./: .gitignore  Cargo.toml  README.md
compressed_transactions/: Cargo.toml
compressed_transactions/src/: .compressed_transaction.rs.swo  compress_outpoints.rs  compressed_transaction.rs  error.rs  lib.rs  main.rs  util.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/compressed_transactions/: fuzz.rs
src/: compress_outpoints.rs  compressed_transaction.rs  error.rs  main.rs
